overflow potential fix and image res change

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ html {
   font-family: "Roboto", sans-serif;
 }
 
-body {
+.wrapper {
+  position: relative;
   overflow-x: hidden;
 }
 
